// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ranked graph displays correct information should render data, height, and width 1`] = `
<DocumentFragment>
  <div
    data-testid="canvas"
    id="stateGraphContainer"
  >
    <svg
      class="svg-container"
      id="canvas"
    >
      <svg
        class="chart svg-content-responsive"
        preserveAspectRatio="xMinYMin meet"
        viewBox="-100 0 900 600"
      >
        <g
          transform="translate(80,20)"
        >
          <rect
            class="bar"
            fill="#51a8f0"
            height="12.500000000000002"
            width="2.61228453508133"
            y="34.375"
          />
          <rect
            class="bar"
            fill="#51a8f0"
            height="12.500000000000002"
            width="4.555668851663025"
            y="18.75"
          />
          <rect
            class="bar"
            fill="#3a7bb0"
            height="12.500000000000002"
            width="24"
            y="3.125"
          />
          <g
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0,50)"
          >
            <path
              class="domain"
              d="M0.5,6V0.5H24.5V6"
              stroke="currentColor"
            />
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                0.0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(2.4422189851905802,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                0.1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(4.3844379703811605,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                0.2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(6.326656955571741,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                0.3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(8.268875940762321,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                0.4
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(10.211094925952901,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                0.5
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(12.153313911143481,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                0.6
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(14.095532896334062,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                0.7
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(16.037751881524642,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                0.8
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(17.97997086671522,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                0.9
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(19.922189851905802,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                1.0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(21.864408837096384,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                1.1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(23.806627822286963,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                1.2
              </text>
            </g>
          </g>
          <g
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="end"
          >
            <path
              class="domain"
              d="M-6,50.5H0.5V0.5H-6"
              stroke="currentColor"
            />
            <g
              class="tick"
              opacity="1"
              transform="translate(0,40.625)"
            >
              <line
                stroke="currentColor"
                x2="-6"
              />
              <text
                dy="0.32em"
                fill="currentColor"
                x="-9"
              >
                atom1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,25)"
            >
              <line
                stroke="currentColor"
                x2="-6"
              />
              <text
                dy="0.32em"
                fill="currentColor"
                x="-9"
              >
                atom2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,9.375)"
            >
              <line
                stroke="currentColor"
                x2="-6"
              />
              <text
                dy="0.32em"
                fill="currentColor"
                x="-9"
              >
                atom3
              </text>
            </g>
          </g>
          <g
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <path
              class="domain"
              d="M6,50.5H0.5V0.5H6"
              stroke="currentColor"
            />
            <g
              class="tick"
              opacity="1"
              transform="translate(0,40.625)"
            >
              <line
                stroke="currentColor"
                x2="6"
              />
              <text
                dy="0.32em"
                fill="currentColor"
                x="9"
              >
                0.13ms
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,25)"
            >
              <line
                stroke="currentColor"
                x2="6"
              />
              <text
                dy="0.32em"
                fill="currentColor"
                x="9"
              >
                0.23ms
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,9.375)"
            >
              <line
                stroke="currentColor"
                x2="6"
              />
              <text
                dy="0.32em"
                fill="currentColor"
                x="9"
              >
                1.24ms
              </text>
            </g>
          </g>
        </g>
      </svg>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Ranked graph initial rendering should not render without initial data 1`] = `
<DocumentFragment>
  <div
    data-testid="canvas"
    id="stateGraphContainer"
  >
    <svg
      class="svg-container"
      id="canvas"
    >
      <svg
        class="chart svg-content-responsive"
        preserveAspectRatio="xMinYMin meet"
        viewBox="-100 0 900 600"
      >
        <g
          transform="translate(80,20)"
        >
          <rect
            class="bar"
            fill="#51a8f0"
            height="33.33333333333333"
            width="12"
            y="8.333333333333336"
          />
          <g
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0,50)"
          >
            <path
              class="domain"
              d="M0.5,6V0.5H24.5V6"
              stroke="currentColor"
            />
            <g
              class="tick"
              opacity="1"
              transform="translate(12.5,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                0
              </text>
            </g>
          </g>
          <g
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="end"
          >
            <path
              class="domain"
              d="M-6,50.5H0.5V0.5H-6"
              stroke="currentColor"
            />
            <g
              class="tick"
              opacity="1"
              transform="translate(0,25)"
            >
              <line
                stroke="currentColor"
                x2="-6"
              />
              <text
                dy="0.32em"
                fill="currentColor"
                x="-9"
              />
            </g>
          </g>
          <g
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <path
              class="domain"
              d="M6,50.5H0.5V0.5H6"
              stroke="currentColor"
            />
            <g
              class="tick"
              opacity="1"
              transform="translate(0,25)"
            >
              <line
                stroke="currentColor"
                x2="6"
              />
              <text
                dy="0.32em"
                fill="currentColor"
                x="9"
              >
                0.00ms
              </text>
            </g>
          </g>
        </g>
      </svg>
    </svg>
  </div>
</DocumentFragment>
`;
